fhir-model/src/main/java/com/ibm/fhir/model/path/FHIRPathParser.java
/*
 * (C) Copyright IBM Corp. 2019
 *
 * SPDX-License-Identifier: Apache-2.0
 */

package com.ibm.fhir.model.path;

import java.util.List;

import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class FHIRPathParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
    public static final int T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9, T__9 = 10, T__10 = 11, T__11 = 12,
            T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17, T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
            T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31, T__31 = 32, T__32 = 33, T__33 = 34, T__34 = 35, T__35 = 36,
            T__36 = 37, T__37 = 38, T__38 = 39, T__39 = 40, T__40 = 41, T__41 = 42, T__42 = 43, T__43 = 44, T__44 = 45, T__45 = 46, T__46 = 47, T__47 = 48,
            T__48 = 49, T__49 = 50, T__50 = 51, T__51 = 52, T__52 = 53, T__53 = 54, DATETIME = 55, TIME = 56, IDENTIFIER = 57, DELIMITEDIDENTIFIER = 58,
            STRING = 59, NUMBER = 60, WS = 61, COMMENT = 62, LINE_COMMENT = 63;
    public static final int RULE_expression = 0, RULE_term = 1, RULE_literal = 2, RULE_externalConstant = 3, RULE_invocation = 4, RULE_function = 5,
            RULE_paramList = 6, RULE_quantity = 7, RULE_unit = 8, RULE_dateTimePrecision = 9, RULE_pluralDateTimePrecision = 10, RULE_typeSpecifier = 11,
            RULE_qualifiedIdentifier = 12, RULE_identifier = 13;
    public static final String[] ruleNames = { "expression", "term", "literal", "externalConstant", "invocation", "function", "paramList", "quantity", "unit",
            "dateTimePrecision", "pluralDateTimePrecision", "typeSpecifier", "qualifiedIdentifier", "identifier" };

    private static final String[] _LITERAL_NAMES = { null, "'.'", "'['", "']'", "'+'", "'-'", "'*'", "'/'", "'div'", "'mod'", "'&'", "'is'", "'as'", "'|'",
            "'<='", "'<'", "'>'", "'>='", "'='", "'~'", "'!='", "'!~'", "'in'", "'contains'", "'and'", "'or'", "'xor'", "'implies'", "'('", "')'", "'{'", "'}'",
            "'true'", "'false'", "'%'", "'$this'", "'$index'", "'$total'", "','", "'year'", "'month'", "'week'", "'day'", "'hour'", "'minute'", "'second'",
            "'millisecond'", "'years'", "'months'", "'weeks'", "'days'", "'hours'", "'minutes'", "'seconds'", "'milliseconds'" };
    private static final String[] _SYMBOLIC_NAMES = { null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null, null, null, "DATETIME", "TIME", "IDENTIFIER", "DELIMITEDIDENTIFIER",
            "STRING", "NUMBER", "WS", "COMMENT", "LINE_COMMENT" };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "FHIRPath.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public FHIRPathParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class ExpressionContext extends ParserRuleContext {
        public ExpressionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_expression;
        }

        public ExpressionContext() {
        }

        public void copyFrom(ExpressionContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class IndexerExpressionContext extends ExpressionContext {
        public List<ExpressionContext> expression() {
            return getRuleContexts(ExpressionContext.class);
        }

        public ExpressionContext expression(int i) {
            return getRuleContext(ExpressionContext.class, i);
        }

        public IndexerExpressionContext(ExpressionContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FHIRPathVisitor)
                return ((FHIRPathVisitor<? extends T>) visitor).visitIndexerExpression(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public static class PolarityExpressionContext extends ExpressionContext {
        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class, 0);
        }

        public PolarityExpressionContext(ExpressionContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FHIRPathVisitor)
                return ((FHIRPathVisitor<? extends T>) visitor).visitPolarityExpression(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public static class AdditiveExpressionContext extends ExpressionContext {
        public List<ExpressionContext> expression() {
            return getRuleContexts(ExpressionContext.class);
        }

        public ExpressionContext expression(int i) {
            return getRuleContext(ExpressionContext.class, i);
        }

        public AdditiveExpressionContext(ExpressionContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FHIRPathVisitor)
                return ((FHIRPathVisitor<? extends T>) visitor).visitAdditiveExpression(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public static class MultiplicativeExpressionContext extends ExpressionContext {
        public List<ExpressionContext> expression() {
            return getRuleContexts(ExpressionContext.class);
        }

        public ExpressionContext expression(int i) {
            return getRuleContext(ExpressionContext.class, i);
        }

        public MultiplicativeExpressionContext(ExpressionContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FHIRPathVisitor)
                return ((FHIRPathVisitor<? extends T>) visitor).visitMultiplicativeExpression(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public static class UnionExpressionContext extends ExpressionContext {
        public List<ExpressionContext> expression() {
            return getRuleContexts(ExpressionContext.class);
        }

        public ExpressionContext expression(int i) {
            return getRuleContext(ExpressionContext.class, i);
        }

        public UnionExpressionContext(ExpressionContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FHIRPathVisitor)
                return ((FHIRPathVisitor<? extends T>) visitor).visitUnionExpression(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public static class OrExpressionContext extends ExpressionContext {
        public List<ExpressionContext> expression() {
            return getRuleContexts(ExpressionContext.class);
        }

        public ExpressionContext expression(int i) {
            return getRuleContext(ExpressionContext.class, i);
        }

        public OrExpressionContext(ExpressionContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FHIRPathVisitor)
                return ((FHIRPathVisitor<? extends T>) visitor).visitOrExpression(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public static class AndExpressionContext extends ExpressionContext {
        public List<ExpressionContext> expression() {
            return getRuleContexts(ExpressionContext.class);
        }

        public ExpressionContext expression(int i) {
            return getRuleContext(ExpressionContext.class, i);
        }

        public AndExpressionContext(ExpressionContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FHIRPathVisitor)
                return ((FHIRPathVisitor<? extends T>) visitor).visitAndExpression(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public static class MembershipExpressionContext extends ExpressionContext {
        public List<ExpressionContext> expression() {
            return getRuleContexts(ExpressionContext.class);
        }

        public ExpressionContext expression(int i) {
            return getRuleContext(ExpressionContext.class, i);
        }

        public MembershipExpressionContext(ExpressionContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FHIRPathVisitor)
                return ((FHIRPathVisitor<? extends T>) visitor).visitMembershipExpression(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public static class InequalityExpressionContext extends ExpressionContext {
        public List<ExpressionContext> expression() {
            return getRuleContexts(ExpressionContext.class);
        }

        public ExpressionContext expression(int i) {
            return getRuleContext(ExpressionContext.class, i);
        }

        public InequalityExpressionContext(ExpressionContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FHIRPathVisitor)
                return ((FHIRPathVisitor<? extends T>) visitor).visitInequalityExpression(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public static class InvocationExpressionContext extends ExpressionContext {
        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class, 0);
        }

        public InvocationContext invocation() {
            return getRuleContext(InvocationContext.class, 0);
        }

        public InvocationExpressionContext(ExpressionContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FHIRPathVisitor)
                return ((FHIRPathVisitor<? extends T>) visitor).visitInvocationExpression(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public static class EqualityExpressionContext extends ExpressionContext {
        public List<ExpressionContext> expression() {
            return getRuleContexts(ExpressionContext.class);
        }

        public ExpressionContext expression(int i) {
            return getRuleContext(ExpressionContext.class, i);
        }

        public EqualityExpressionContext(ExpressionContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FHIRPathVisitor)
                return ((FHIRPathVisitor<? extends T>) visitor).visitEqualityExpression(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public static class ImpliesExpressionContext extends ExpressionContext {
        public List<ExpressionContext> expression() {
            return getRuleContexts(ExpressionContext.class);
        }

        public ExpressionContext expression(int i) {
            return getRuleContext(ExpressionContext.class, i);
        }

        public ImpliesExpressionContext(ExpressionContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FHIRPathVisitor)
                return ((FHIRPathVisitor<? extends T>) visitor).visitImpliesExpression(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public static class TermExpressionContext extends ExpressionContext {
        public TermContext term() {
            return getRuleContext(TermContext.class, 0);
        }

        public TermExpressionContext(ExpressionContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FHIRPathVisitor)
                return ((FHIRPathVisitor<? extends T>) visitor).visitTermExpression(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public static class TypeExpressionContext extends ExpressionContext {
        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class, 0);
        }

        public TypeSpecifierContext typeSpecifier() {
            return getRuleContext(TypeSpecifierContext.class, 0);
        }

        public TypeExpressionContext(ExpressionContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FHIRPathVisitor)
                return ((FHIRPathVisitor<? extends T>) visitor).visitTypeExpression(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final ExpressionContext expression() throws RecognitionException {
        return expression(0);
    }

    private ExpressionContext expression(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
        ExpressionContext _prevctx = _localctx;
        int _startState = 0;
        enterRecursionRule(_localctx, 0, RULE_expression, _p);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(32);
                switch (_input.LA(1)) {
                case T__10:
                case T__11:
                case T__27:
                case T__29:
                case T__31:
                case T__32:
                case T__33:
                case T__34:
                case T__35:
                case T__36:
                case DATETIME:
                case TIME:
                case IDENTIFIER:
                case DELIMITEDIDENTIFIER:
                case STRING:
                case NUMBER: {
                    _localctx = new TermExpressionContext(_localctx);
                    _ctx = _localctx;
                    _prevctx = _localctx;

                    setState(29);
                    term();
                }
                    break;
                case T__3:
                case T__4: {
                    _localctx = new PolarityExpressionContext(_localctx);
                    _ctx = _localctx;
                    _prevctx = _localctx;
                    setState(30);
                    _la = _input.LA(1);
                    if (!(_la == T__3 || _la == T__4)) {
                        _errHandler.recoverInline(this);
                    } else {
                        consume();
                    }
                    setState(31);
                    expression(11);
                }
                    break;
                default:
                    throw new NoViableAltException(this);
                }
                _ctx.stop = _input.LT(-1);
                setState(74);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null)
                            triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            setState(72);
                            _errHandler.sync(this);
                            switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
                            case 1: {
                                _localctx = new MultiplicativeExpressionContext(new ExpressionContext(_parentctx, _parentState));
                                pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                setState(34);
                                if (!(precpred(_ctx, 10)))
                                    throw new FailedPredicateException(this, "precpred(_ctx, 10)");
                                setState(35);
                                _la = _input.LA(1);
                                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8))) != 0))) {
                                    _errHandler.recoverInline(this);
                                } else {
                                    consume();
                                }
                                setState(36);
                                expression(11);
                            }
                                break;
                            case 2: {
                                _localctx = new AdditiveExpressionContext(new ExpressionContext(_parentctx, _parentState));
                                pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                setState(37);
                                if (!(precpred(_ctx, 9)))
                                    throw new FailedPredicateException(this, "precpred(_ctx, 9)");
                                setState(38);
                                _la = _input.LA(1);
                                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__4) | (1L << T__9))) != 0))) {
                                    _errHandler.recoverInline(this);
                                } else {
                                    consume();
                                }
                                setState(39);
                                expression(10);
                            }
                                break;
                            case 3: {
                                _localctx = new UnionExpressionContext(new ExpressionContext(_parentctx, _parentState));
                                pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                setState(40);
                                if (!(precpred(_ctx, 7)))
                                    throw new FailedPredicateException(this, "precpred(_ctx, 7)");
                                setState(41);
                                match(T__12);
                                setState(42);
                                expression(8);
                            }
                                break;
                            case 4: {
                                _localctx = new InequalityExpressionContext(new ExpressionContext(_parentctx, _parentState));
                                pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                setState(43);
                                if (!(precpred(_ctx, 6)))
                                    throw new FailedPredicateException(this, "precpred(_ctx, 6)");
                                setState(44);
                                _la = _input.LA(1);
                                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16))) != 0))) {
                                    _errHandler.recoverInline(this);
                                } else {
                                    consume();
                                }
                                setState(45);
                                expression(7);
                            }
                                break;
                            case 5: {
                                _localctx = new EqualityExpressionContext(new ExpressionContext(_parentctx, _parentState));
                                pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                setState(46);
                                if (!(precpred(_ctx, 5)))
                                    throw new FailedPredicateException(this, "precpred(_ctx, 5)");
                                setState(47);
                                _la = _input.LA(1);
                                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20))) != 0))) {
                                    _errHandler.recoverInline(this);
                                } else {
                                    consume();
                                }
                                setState(48);
                                expression(6);
                            }
                                break;
                            case 6: {
                                _localctx = new MembershipExpressionContext(new ExpressionContext(_parentctx, _parentState));
                                pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                setState(49);
                                if (!(precpred(_ctx, 4)))
                                    throw new FailedPredicateException(this, "precpred(_ctx, 4)");
                                setState(50);
                                _la = _input.LA(1);
                                if (!(_la == T__21 || _la == T__22)) {
                                    _errHandler.recoverInline(this);
                                } else {
                                    consume();
                                }
                                setState(51);
                                expression(5);
                            }
                                break;
                            case 7: {
                                _localctx = new AndExpressionContext(new ExpressionContext(_parentctx, _parentState));
                                pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                setState(52);
                                if (!(precpred(_ctx, 3)))
                                    throw new FailedPredicateException(this, "precpred(_ctx, 3)");
                                setState(53);
                                match(T__23);
                                setState(54);
                                expression(4);
                            }
                                break;
                            case 8: {
                                _localctx = new OrExpressionContext(new ExpressionContext(_parentctx, _parentState));
                                pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                setState(55);
                                if (!(precpred(_ctx, 2)))
                                    throw new FailedPredicateException(this, "precpred(_ctx, 2)");
                                setState(56);
                                _la = _input.LA(1);
                                if (!(_la == T__24 || _la == T__25)) {
                                    _errHandler.recoverInline(this);
                                } else {
                                    consume();
                                }
                                setState(57);
                                expression(3);
                            }
                                break;
                            case 9: {
                                _localctx = new ImpliesExpressionContext(new ExpressionContext(_parentctx, _parentState));
                                pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                setState(58);
                                if (!(precpred(_ctx, 1)))
                                    throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                setState(59);
                                match(T__26);
                                setState(60);
                                expression(2);
                            }
                                break;
                            case 10: {
                                _localctx = new InvocationExpressionContext(new ExpressionContext(_parentctx, _parentState));
                                pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                setState(61);
                                if (!(precpred(_ctx, 13)))
                                    throw new FailedPredicateException(this, "precpred(_ctx, 13)");
                                setState(62);
                                match(T__0);
                                setState(63);
                                invocation();
                            }
                                break;
                            case 11: {
                                _localctx = new IndexerExpressionContext(new ExpressionContext(_parentctx, _parentState));
                                pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                setState(64);
                                if (!(precpred(_ctx, 12)))
                                    throw new FailedPredicateException(this, "precpred(_ctx, 12)");
                                setState(65);
                                match(T__1);
                                setState(66);
                                expression(0);
                                setState(67);
                                match(T__2);
                            }
                                break;
                            case 12: {
                                _localctx = new TypeExpressionContext(new ExpressionContext(_parentctx, _parentState));
                                pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                setState(69);
                                if (!(precpred(_ctx, 8)))
                                    throw new FailedPredicateException(this, "precpred(_ctx, 8)");
                                setState(70);
                                _la = _input.LA(1);
                                if (!(_la == T__10 || _la == T__11)) {
                                    _errHandler.recoverInline(this);
                                } else {
                                    consume();
                                }
                                setState(71);
                                typeSpecifier();
                            }
                                break;
                            }
                        }
                    }
                    setState(76);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public static class TermContext extends ParserRuleContext {
        public TermContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_term;
        }

        public TermContext() {
        }

        public void copyFrom(TermContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class ExternalConstantTermContext extends TermContext {
        public ExternalConstantContext externalConstant() {
            return getRuleContext(ExternalConstantContext.class, 0);
        }

        public ExternalConstantTermContext(TermContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FHIRPathVisitor)
                return ((FHIRPathVisitor<? extends T>) visitor).visitExternalConstantTerm(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public static class LiteralTermContext extends TermContext {
        public LiteralContext literal() {
            return getRuleContext(LiteralContext.class, 0);
        }

        public LiteralTermContext(TermContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FHIRPathVisitor)
                return ((FHIRPathVisitor<? extends T>) visitor).visitLiteralTerm(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public static class ParenthesizedTermContext extends TermContext {
        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class, 0);
        }

        public ParenthesizedTermContext(TermContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FHIRPathVisitor)
                return ((FHIRPathVisitor<? extends T>) visitor).visitParenthesizedTerm(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public static class InvocationTermContext extends TermContext {
        public InvocationContext invocation() {
            return getRuleContext(InvocationContext.class, 0);
        }

        public InvocationTermContext(TermContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FHIRPathVisitor)
                return ((FHIRPathVisitor<? extends T>) visitor).visitInvocationTerm(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final TermContext term() throws RecognitionException {
        TermContext _localctx = new TermContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_term);
        try {
            setState(84);
            switch (_input.LA(1)) {
            case T__10:
            case T__11:
            case T__34:
            case T__35:
            case T__36:
            case IDENTIFIER:
            case DELIMITEDIDENTIFIER:
                _localctx = new InvocationTermContext(_localctx);
                enterOuterAlt(_localctx, 1); {
                setState(77);
                invocation();
            }
                break;
            case T__29:
            case T__31:
            case T__32:
            case DATETIME:
            case TIME:
            case STRING:
            case NUMBER:
                _localctx = new LiteralTermContext(_localctx);
                enterOuterAlt(_localctx, 2); {
                setState(78);
                literal();
            }
                break;
            case T__33:
                _localctx = new ExternalConstantTermContext(_localctx);
                enterOuterAlt(_localctx, 3); {
                setState(79);
                externalConstant();
            }
                break;
            case T__27:
                _localctx = new ParenthesizedTermContext(_localctx);
                enterOuterAlt(_localctx, 4); {
                setState(80);
                match(T__27);
                setState(81);
                expression(0);
                setState(82);
                match(T__28);
            }
                break;
            default:
                throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class LiteralContext extends ParserRuleContext {
        public LiteralContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_literal;
        }

        public LiteralContext() {
        }

        public void copyFrom(LiteralContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class TimeLiteralContext extends LiteralContext {
        public TerminalNode TIME() {
            return getToken(FHIRPathParser.TIME, 0);
        }

        public TimeLiteralContext(LiteralContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FHIRPathVisitor)
                return ((FHIRPathVisitor<? extends T>) visitor).visitTimeLiteral(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public static class NullLiteralContext extends LiteralContext {
        public NullLiteralContext(LiteralContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FHIRPathVisitor)
                return ((FHIRPathVisitor<? extends T>) visitor).visitNullLiteral(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public static class DateTimeLiteralContext extends LiteralContext {
        public TerminalNode DATETIME() {
            return getToken(FHIRPathParser.DATETIME, 0);
        }

        public DateTimeLiteralContext(LiteralContext ctx) {
            copyFrom(ctx);
        }
